--- a/app/assets/stylesheets/modules/_mixins-vendor-prefixes.scss
+++ b/app/assets/stylesheets/modules/_mixins-vendor-prefixes.scss
@@ -7,6 +7,13 @@
           transition: $transition;
 }
 
+@mixin animation($animation) {
+	-webkit-animation: $animation;
+	   -moz-animation: $animation;
+	    -ms-animation: $animation;
+	        animation: $animation;
+}
+
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
      -moz-border-radius: $radius;
